--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@oclif/core": "^4",
     "@oclif/plugin-help": "^6",
     "@oclif/plugin-plugins": "^5",
+    "axios": "^1.12.2",
     "inquirer": "^12.9.4"
   },
   "devDependencies": {
     "@eslint/compat": "^1",
     "@oclif/prettier-config": "^0.2.1",
     "@oclif/test": "^4",
+    "@types/axios": "^0.9.36",
     "@types/chai": "^4",
     "@types/inquirer": "^9.0.9",
     "@types/mocha": "^10",
